[package]
name = "bevy_mini_fps"
version = "0.1.0"
edition = "2021"

authors = ["Mincong Lu <mintlux667@gmail.com>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/mintlu8/bevy_mini_fps"
description = """
Quick and dirty FPS display for bevy.
"""
keywords = ["bevy", "fps", "diagnostics"]


[dependencies]
sysinfo = "0.33.0"

[dev-dependencies]
bevy = "0.15.0"
